# admin-panel

./: .env  Cargo.toml
src/: api.rs  auth.rs  auth_middleware.rs  backup.rs  hosts.rs  instructors.rs  main.rs  routing.rs  security_headers.rs  types.rs  views.rs
templates/: index.html  login.html  manage.html  new.html
