[package]
name = "admin-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono-tz = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
actix-web = { version = "4", features = ["rustls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0" }
actix-service = "2.0.2"
futures-util = "0.3.31"
dotenv = "0.15.0"
actix_route_rate_limiter = "0.2.1"
rustls = "0.20"
rustls-pemfile = "1.0"
thiserror = "2.0.3"
aws-sdk-s3 = "1.61.0"
aws-config = "1.5.10"
zstd = "0.13.2"
futures = "0.3.31"
actix-http = "3.9.0"
askama_actix = "0.14.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
ammonia = "4.0.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
argon2 = "0.5.3"

